objects/DMLSysException__c.object
<CustomObject>
    <fields>
        <fullName>DML_Field_Names__c</fullName>
        <description>DML Field Names</description>
        <inlineHelpText>DML Field Names</inlineHelpText>
        <label>DML Field Names</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DML_ID__c</fullName>
        <description>Record ID causing the DML Exception</description>
        <inlineHelpText>Record ID</inlineHelpText>
        <label>DML ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DML_Index__c</fullName>
        <description>DML Index</description>
        <inlineHelpText>DML Index</inlineHelpText>
        <label>DML Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DML_Message__c</fullName>
        <description>DML Message reported by the exception</description>
        <inlineHelpText>DML Message reported by the exception</inlineHelpText>
        <label>DML Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DML_Type__c</fullName>
        <description>Type of DML Status reported by the Exception</description>
        <inlineHelpText>DML Status Type</inlineHelpText>
        <label>DML Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Exception__c</fullName>
        <description>System Exception that originated the DML Exception</description>
        <inlineHelpText>System Exception that originated the DML Exception</inlineHelpText>
        <label>System Exception</label>
        <referenceTo>SysException__c</referenceTo>
        <relationshipLabel>DML Exceptions</relationshipLabel>
        <relationshipName>DML_Exceptions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
</CustomObject>